services/files/front/components/chat-room-button/chat-room-button.css
#room-button {
    display: grid;
    grid-template: 60px / 40px 1fr auto;
    gap: 10px;
    align-items: center;

    background: #4a2853;
    border-radius: 10px;
    padding: 5px 15px;

    cursor: pointer;
    user-select: none;

    &:hover {
        background: #5a3863;
    }
}

#room-icon {
    max-width: 100%;
}

#room-info {
    display: flex;
    flex-direction: column;
    gap: .5em;
    justify-content: center;

    & > * {
        margin: 0;
    }
}

#icon-fight {
    height: 35px;

    &:hover {
        transform: scale(1.2);
    }
}

#room-preview {
    max-width: 220px;
    overflow: clip;
}

